Fixed sidebar unnecessarily reacting to touch on mobile

--- a/aplikacja/www/css/index.css
+++ b/aplikacja/www/css/index.css
@@ -186,6 +186,7 @@ h1 {
     min-height: 100vh;
     margin-left: -220px;
 	transition: all 0.3s;
+	touch-action: none;
 }
 
 #sidebar .sidebar-header {
